Fix search bar dark mode background

--- a/style.css
+++ b/style.css
@@ -667,7 +667,6 @@ button {
 }
 
 #search-input {
-  border: 1px solid #ccc !important; /* Simple gray border */
   margin: 0 !important; /* Remove margins */
 }
 
